provide demo to run python crawler

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -18,6 +18,7 @@
         <module>axbot-dao</module>
         <module>axbot-service</module>
         <module>axbot-api</module>
+        <module>axbot-crawler</module>
     </modules>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
