--- a/crawler/Dockerfile
+++ b/crawler/Dockerfile
@@ -1,6 +1,14 @@
 FROM python:3.11-alpine
 WORKDIR /app
 COPY requirements.txt ./
+RUN pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
 RUN pip install -r requirements.txt
+
+RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.tuna.tsinghua.edu.cn/g' /etc/apk/repositories
+RUN apk upgrade
+RUN apk --update add chromium chromium-chromedriver unzip curl
+#RUN wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
+#RUN unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
+
 COPY main.py ./
 ENTRYPOINT ["python", "-u", "main.py"]
