add kook basic support

--- a/server/axbot-api/pom.xml
+++ b/server/axbot-api/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>axbot-service</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.github.axiangcoding</groupId>
+            <artifactId>axbot-bot</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <exclusions>
@@ -56,6 +61,12 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.0.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba.fastjson2/fastjson2 -->
+        <dependency>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
+            <version>2.0.25</version>
         </dependency>
     </dependencies>
 
