--- a/server/axbot-api/src/main/resources/application.yml
+++ b/server/axbot-api/src/main/resources/application.yml
@@ -19,6 +19,8 @@ spring:
       lettuce:
         pool:
           enabled: true
+  jackson:
+    property-naming-strategy: SNAKE_CASE
 
 
 logging:
