provide kookclient usage demo

--- a/server/axbot-service/pom.xml
+++ b/server/axbot-service/pom.xml
@@ -15,5 +15,9 @@
             <groupId>com.github.axiangcoding</groupId>
             <artifactId>axbot-dao</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.axiangcoding</groupId>
+            <artifactId>axbot-bot</artifactId>
+        </dependency>
     </dependencies>
 </project>
