--- a/server/pom.xml
+++ b/server/pom.xml
@@ -64,6 +64,12 @@
                 <artifactId>axbot-crawler</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/com.alibaba.fastjson2/fastjson2 -->
+            <dependency>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2</artifactId>
+                <version>2.0.25</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
