--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   build-server:
-    name: build image
+    name: build axbot-server image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -66,7 +66,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
   build-crawler:
-    name: build image
+    name: build axbot-crawler image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
