--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -44,8 +44,8 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            $SERVER_IMAGE_NAME
-            ghcr.io/$SERVER_IMAGE_NAME
+            ${{ server.image.name }}
+            ghcr.io/${{ server.image.name }}
           tags: |
             type=schedule,pattern=nightly
             type=edge
@@ -96,8 +96,8 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            $CRAWLER_IMAGE_NAME
-            ghcr.io/$CRAWLER_IMAGE_NAME
+            ${{ crawler.image.name }}
+            ghcr.io/${{ crawler.image.name }}
           tags: |
             type=schedule,pattern=nightly
             type=edge
