--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,8 @@
-FROM maven:3.9-eclipse-temurin-17-alpine AS builder
+FROM maven:3-eclipse-temurin-17-alpine AS builder
 WORKDIR /app
 #COPY build/settings.xml /root/.m2/settings.xml
 COPY . /app
-RUN mvn clean package
+RUN mvn clean package -Dmaven.test.skip=true
 
 FROM eclipse-temurin:17-jre-alpine
 WORKDIR /data
