--- a/server/axbot-api/src/main/resources/application.yml
+++ b/server/axbot-api/src/main/resources/application.yml
@@ -9,6 +9,8 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: update
+      naming:
+        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/axbot
