--- a/server/axbot-dao/pom.xml
+++ b/server/axbot-dao/pom.xml
@@ -18,6 +18,10 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>com.github.axiangcoding</groupId>
+            <artifactId>axbot-crawler</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
