Import spring-session-data-redis

--- a/server/axbot-api/src/main/resources/application.yml
+++ b/server/axbot-api/src/main/resources/application.yml
@@ -19,9 +19,9 @@ spring:
   data:
     redis:
       url: redis://localhost:6379
-      lettuce:
-        pool:
-          enabled: true
+      repositories:
+        enabled: false
+
   rabbitmq:
     host: localhost
     port: 5672
