--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -6,5 +6,5 @@ RUN gradle bootJar
 
 FROM eclipse-temurin:17-jre-alpine
 WORKDIR /data
-COPY --from=builder /app/axbot-api/target/*.jar /app/app.jar
+COPY --from=builder /app/axbot-server/build/libs/*.jar /app/app.jar
 ENTRYPOINT ["java", "-jar", "/app/app.jar"]
