--- a/core/axbot-server/src/main/resources/application.yml
+++ b/core/axbot-server/src/main/resources/application.yml
@@ -33,4 +33,9 @@ logging:
     path: ./logs/
 
 kook:
+  enabled: true
   bot-token:
+  verify-token:
+  trigger-message-prefix:
+    - .axbot
+    - axbot
