set version to image

--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -1,10 +1,11 @@
 FROM gradle:8-alpine AS builder
 WORKDIR /app
-#COPY build/settings.xml /root/.m2/settings.xml
 COPY . /app
 RUN gradle bootJar
 
 FROM eclipse-temurin:17-jre-alpine
+ARG VERSION
+ENV APP_VERSION=${VERSION}
 WORKDIR /data
 COPY --from=builder /app/axbot-server/build/libs/*.jar /app/app.jar
 ENTRYPOINT ["java", "-jar", "/app/app.jar"]
