--- a/core/axbot-server/src/main/resources/application.yml
+++ b/core/axbot-server/src/main/resources/application.yml
@@ -34,6 +34,11 @@ logging:
     path: ./logs/
 
 bot:
+  censor:
+    enabled: true
+    qiniu:
+      access-token:
+      secret-token:
   trigger-message-prefix:
     - axbot
     - .axbot
