--- a/core/axbot-server/src/main/resources/application.yml
+++ b/core/axbot-server/src/main/resources/application.yml
@@ -46,6 +46,12 @@ bot:
     enabled: true
     bot-token:
     verify-token:
+  openai:
+    api-key:
+    proxy:
+      type: direct
+      host:
+      port:
   cqhttp:
     enabled: true
     base-url: http://localhost:5700/
