--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,2 +1,2 @@
 # These are supported funding model platforms
-custom: https://afdian.net/a/axbot
+custom: https://afdian.net/order/create?user_id=966767508b5811eca47c52540025c377&custom_price=10
