Fix swagger request error

--- a/core/axbot-server/src/main/resources/application.yml
+++ b/core/axbot-server/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
   servlet:
     context-path: /api
   shutdown: graceful
-
+  forward-headers-strategy: framework
 spring:
   jpa:
     open-in-view: false
