Update bug report template (#141)

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -26,6 +26,7 @@ body:
       options:
         - Kook
         - Cqhttp
+      multiple: true
     validations:
       required: true
   - type: dropdown
