Implement simbot as bot platform (#122, #73)

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -33,6 +33,9 @@ logging:
     name: ./logs/axbot.log
     path: ./logs/
 
+simbot:
+  auto-start-bots: true
+
 #bot:
 #  censor:
 #    enabled: true
