Add simbot resource scan path

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -35,6 +35,8 @@ logging:
 
 simbot:
   auto-start-bots: true
+  bot-configuration-resources:
+    - 'classpath:simbot-bots/*.bot*'
 
 #bot:
 #  censor:
