--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -6,12 +6,14 @@ server:
   shutdown: graceful
   forward-headers-strategy: framework
 spring:
+  jackson:
+    property-naming-strategy: SNAKE_CASE
   jpa:
     open-in-view: false
     hibernate:
       ddl-auto: update
-#      naming:
-#        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
+  #      naming:
+  #        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/axbot
@@ -27,6 +29,7 @@ spring:
     port: 5672
     username: user
     password: password
+
 
 logging:
   file:
