--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -43,12 +43,13 @@ jobs:
         with:
           languages: ${{ matrix.language }}
 
-      - if: matrix.language == 'java'
-        name: Build java application
-        uses: actions/setup-java@v3
+      - uses: actions/setup-java@v3
         with:
           distribution: "temurin"
           java-version: "17"
+
+      - name: Build java application
+        if: matrix.language == 'java'
         run: |
           cd app
           gradlew bootJar
