Add echo to action step

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -51,6 +51,7 @@ jobs:
       - name: Build java application
         if: matrix.language == 'java'
         run: |
+          echo "build java application"
           cd app
           gradlew bootJar
 
