--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           echo "build java application"
           cd app
-          gradlew bootJar
+          ./gradlew bootJar
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
