Add basic bot function

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -13,8 +13,8 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: update
-  #      naming:
-  #        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
+      naming:
+        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/axbot
