--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -7,65 +7,10 @@ on:
       - "v*.*.*"
 
 env:
-  CORE_IMAGE_NAME: axiangcoding/axbot-core
-  APP_IMAGE_NAME: axiangcoding/axbot-app
-  CRAWLER_IMAGE_NAME: axiangcoding/axbot-crawler
+  APP_IMAGE_NAME: axbot-dev/axbot-app
+  CRAWLER_IMAGE_NAME: axbot-dev/axbot-crawler
 
 jobs:
-  build-core:
-    name: build axbot-core image
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: |
-            ${{ env.CORE_IMAGE_NAME }}
-            ghcr.io/${{ env.CORE_IMAGE_NAME }}
-          tags: |
-            type=schedule,pattern=nightly
-            type=edge
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: ./core
-          push: true
-          build-args: |
-            VERSION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
   build-app:
     name: build axbot-app image
     runs-on: ubuntu-latest
