fix(app): 修复redis连接池设置

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
       url: redis://localhost:6379
       repositories:
         enabled: false
-      jedis:
+      lettuce:
         pool:
           enabled: true
   rabbitmq:
