refactor(app): 修改配置项的前缀

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -45,7 +45,7 @@ simbot:
   bot-configuration-resources:
     - 'classpath:simbot-bots/*.bot*'
 
-bot:
+app:
   censor:
     enabled: true
     qiniu:
