feat(app): 修改数据库连接配置项

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/axbot
+    url: jdbc:mysql://localhost:3306/axbot?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
     username: root
     password: example
   data:
