fix(app): 修改错误的配置项
Closes #227

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -10,7 +10,7 @@ ENV APP_VERSION=${VERSION}
 ENV JAVA_TOOL_OPTIONS="-javaagent:/app/tools/opentelemetry-javaagent.jar"
 ENV OTEL_TRACES_EXPORTER="none"
 ENV OTEL_METRICS_EXPORTER="none"
-ENV OTEL_LOGS_EXPORTER="NONE"
+ENV OTEL_LOGS_EXPORTER="none"
 ENV OTEL_SERVICE_NAME="axbot-app"
 EXPOSE 9999
 WORKDIR /data
