--- a/crawler/pyproject.toml
+++ b/crawler/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 loguru = "^0.7.2"
 pika = "^1.3.2"
+drissionpage = "^3.2.33"
 
 
 [tool.poetry.group.dev.dependencies]
